diabetes-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diabetes-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /mlops
            pathType: Prefix
            backend:
              service:
                name: diabetes-api
                port:
                  number: 80
